[package]
name = "swapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bson = "2.6.1"
mongodb = "2.5.0"
serde = "1.0.163"
serde_json = "1.0.96"
uuid = "1.3.3"
chrono = "0.4.24"
config = "0.13.3"
reqwest = "0.11.18"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
hedera = "0.18.0"